--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://oussamabassin.github.io/MiniProject",
+  "homepage": "https://oussamabassin.github.io/MiniProject/",
   "name": "miniproject-final",
   "private": true,
   "version": "0.0.0",
